logs/Slang/generated/hdlconv/hdlconvertor_p791.sv.log
name: hdlconvertor_p791
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:3:9: error: identifier 'SIZE' used before its declaration
output [SIZE-1:0] sum;
        ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:2:11: note: declared here
parameter SIZE = 4;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:6:8: error: identifier 'SIZE' used before its declaration
input [SIZE-1:0] a, b;
       ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:2:11: note: declared here
parameter SIZE = 4;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:16:1: error: expected member
xor g1( t1, a[i], b[i]) ;
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:17:1: error: expected member
xor g2( sum[i],t1, c[i]);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:18:1: error: expected member
and g3( t2, a[i], b[i]) ;
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:19:1: error: expected member
and g4(t3,t1, c[i]     );
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p791.sv:20:1: error: expected member
or  g5( c[i+1],t2,t3)   ;
^~
